# price-m2

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS  price_m2_bot.yml  pull_request_template.md
.github/workflows/: api.yml
api/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
api/construction/: manage.py
api/construction/construction/: asgi.py  urls.py  wsgi.py
api/construction/construction/settings/: base.py  production.py
api/construction/price_m2/: admin.py  api_views.py  apps.py  constants.py  exceptions_handler.py  models.py  serializers.py  services.py  urls.py  viewsets.py
api/construction/price_m2/fixtures/: price-m2_base.yaml
api/construction/price_m2/management/commands/: price-m2_pull-prices-to-db.py
api/construction/price_m2/migrations/: 0001_initial.py
api/construction/price_m2/tests/: data_price_m2.py  test_integrations.py  test_services.py
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.js
web/src/components/: aggregate_input.js  construction_type_selector.js  zip_code.js
